--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -20,3 +20,41 @@
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you,
 // either add and import new partial files, or modify those in GOV.UK elements to fit your user needs.
+
+
+.trade-non-trade{
+	.block-label{
+		//width: 45%;
+	}
+}
+
+.form-hint{
+	color: $text-colour;
+}
+.form-control-1-1 {
+  width: 100%;
+}
+
+.form-group{
+	margin-bottom: 60px;
+	&.related{
+		margin-bottom: 30px;
+	}
+}
+
+.form-control-8-chars   {	width: 8em }
+
+.back-link{
+	margin: 45px 0;
+	font-size: 16px;
+	a{
+		color: $text-colour;
+	}
+}
+
+.reg{
+  background: yellow;
+  padding: 3px 20px 1px 20px;
+  font-weight: bold;
+  border: 1px solid black;
+}
