tweaked index for links to pages

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,17 +8,39 @@
 
 <main id="content" role="main">
 
-	<h1 class="heading-xlarge">Welcome to the GOV.UK prototyping kit</h1>
+	<h1 class="heading-xlarge">Vehicle management prototype</h1>
 	<!-- feel free to change this page to suit your needs -->
 
-	<p>This is the index.html page - we recommend you put links to key pages here.</p>
+	<p>Direct links to separate pages/steps, to be joined up at some point</p>
 
 	<h2 class="heading-large">Pages</h2>
 
 	<ul>
 		<li>
-			<a href="/examples">Example pages</a>
+			<a href="type-of-transfer">Type of transfer</a>
 		</li>
+
+		<li>
+			<a href="02-trade-trade">Trade to trade : not required message</a>
+		</li>
+
+		<li>
+			<a href="vehicle-details">Enter vehicle details</a>
+		</li>
+
+		<li>
+			<a href="vehicle-details-confirm">Confirm vehicle details</a>
+		</li>
+
+		<li>
+			<a href="transfer-date">Transfer date</a>
+		</li>
+
+		<li>
+			<a href="new-keeper-details">New keeper details</a>
+		</li>
+
+
 	</ul>
 
 	<h2 class="heading-large">Resources</h2>
