added the css-font for numberplate style

--- a/app/views/vehicle-details-confirm.html
+++ b/app/views/vehicle-details-confirm.html
@@ -15,7 +15,7 @@
 
 <p class="font-medium">
 <!--Registration number: -->
-<span class="reg">ABC 123</span>
+<span class="reg-mark">ABC 123</span>
 </p>
 
 <div class="grid-row">
